# gopal

./: .gitignore  .pre-commit-config.yaml  COMPATIBILITY.md  GEMINI.md  HANDOFF_SESSION_NOTES.md  LICENSE  ORIGINAL_README.md  README.md  pyproject.toml
.github/: README.md  WORKFLOWS.md
.github/workflows/: opa-ci.yaml
.regal/: config.yaml
custom/: README.md
custom/dharmic/v1/ahimsa/: ahimsa.rego
custom/dharmic/v1/dharma/: dharma.rego
custom/dharmic/v1/satya/: satya.rego
custom/example/v1/compliance/: basic_compliance.rego  basic_compliance.rego.wip  basic_compliance_test.rego  basic_compliance_test.rego.wip
docs/: FAQ.md
global/: README.md
global/v1/accountability/: accountability.rego  accountability_test.rego
global/v1/common/: common_rules.rego  common_rules_test.rego  compliance.rego  compliance_test.rego  content_safety.rego  fairness.rego  risk_management.rego
global/v1/fairness/: fairness.rego  fairness_test.rego
global/v1/toxicity/: toxicity.rego  toxicity_test.rego
global/v1/transparency/: transparency.rego  transparency_test.rego
helper_functions/: reporting.rego  reporting_test.rego  validation.rego
industry_specific/: README.md
industry_specific/automotive/v1/vehicle_safety/: vehicle_safety.rego  vehicle_safety_test.rego
industry_specific/bfs/v1/loan_evaluation/: README.md  fair_lending.rego  fair_lending_test.rego
industry_specific/bfs/v1/model_risk/: model_risk.rego  model_risk_test.rego
international/: README.md
international/brazil/v1/: README.md
international/nist/v1/: README.md
operational/: README.md
(+64 files in other folders)
